# agentenv

./: .agentrc.example.yaml  .agentrc.yaml  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  rustfmt.toml
.claude/: settings.json
.claude/agents/: rust-coding-author.md
.claude/hooks/: format-changed.sh
.claude/skills/review-and-fix/: SKILL.md
.claude/skills/ship-changes/: SKILL.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml  publish-vscode.yml  release.yml
crates/agentenv-cli/: Cargo.toml
crates/agentenv-cli/src/: main.rs
crates/agentenv-cli/tests/: cli.rs
crates/agentenv-core/: Cargo.toml
crates/agentenv-core/src/: claude_config.rs  clean.rs  config.rs  error.rs  frontmatter.rs  gitignore.rs  init.rs  lib.rs  loader.rs  marketplace.rs  pipeline_common.rs  plugin.rs  resolver.rs  state.rs  symlink.rs  sync.rs  target.rs
crates/agentenv-core/src/agents/: canonical_io.rs  mod.rs  pipeline.rs  types.rs
crates/agentenv-core/src/agents/readers/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  mod.rs
crates/agentenv-core/src/agents/writers/: codex.rs  mod.rs
crates/agentenv-core/src/hooks/: canonical_io.rs  mod.rs  pipeline.rs  types.rs
crates/agentenv-core/src/hooks/readers/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  mod.rs
crates/agentenv-core/src/hooks/writers/: codex.rs  cursor.rs  mod.rs
crates/agentenv-core/src/skills/: canonical_io.rs  mod.rs  pipeline.rs  types.rs
crates/agentenv-core/src/skills/readers/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  mod.rs
crates/agentenv-core/src/skills/writers/: mod.rs
crates/agentenv-core/src/targets/: defaults.rs  mod.rs
crates/agentenv-core/tests/: config_loading.rs  hooks_pipeline.rs  plugin_resolution.rs
docs/: HOOKS.md  RELEASING.md  platform-standards.md
schemas/: agentrc.schema.json
vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: agentenv.ts  extension.ts
