[workspace]
members = [
    "crates/agentenv-core",
    "crates/agentenv-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Arantes"]
license = "MIT"
repository = "https://github.com/eduardoarantes/agentenv"
keywords = ["ai", "agent", "plugin", "cli", "config"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
useless_vec = "allow"
module_name_repetitions = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
