[workspace]
members = [
    "crates/agentenv-core",
    "crates/agentenv-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Eduardo Arantes"]
license = "MIT"
homepage = "https://github.com/eduardoarantes/agentenv"
repository = "https://github.com/eduardoarantes/agentenv"
keywords = ["ai", "agent", "plugin", "cli", "config"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
useless_vec = "allow"
module_name_repetitions = "allow"

[workspace.metadata.dist]
# Allow `.github/workflows/release.yml` to drift from what `dist generate`
# would produce, so we can narrow its tag pattern to bare CLI releases
# (`vX.Y.Z`) without `dist plan` failing on the diff. If you re-run
# `dist init`/`generate`, re-apply the narrower tag pattern by hand and
# keep this allow-list entry.
allow-dirty = ["ci"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
