[package]
name = "agentenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Project-scoped AI agent and plugin environment manager"

[[bin]]
name = "agentenv"
path = "src/main.rs"

[dependencies]
agentenv-core = { path = "../agentenv-core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
