[package]
name = "agentenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "Project-scoped AI agent and plugin environment manager"

[[bin]]
name = "agentenv"
path = "src/main.rs"

[dependencies]
agentenv-core = { path = "../agentenv-core", version = "0.1.2" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
