[package]
name = "agentenv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for agentenv - project-scoped AI agent and plugin environment manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[lints]
workspace = true
